FIX: OVERFLOW X INNECESARIO
Corrige error que hacía scrolleable en el eje x la vista.

--- a/client/src/static/css/pages/config.css
+++ b/client/src/static/css/pages/config.css
@@ -96,6 +96,10 @@ a{
     color: #005f8f;
 }
 
+.site-content {
+    overflow-x: hidden;
+}
+
 @media screen and (max-width: 730px) {
     #menu {
         flex-direction: column;
